Updating in player name window

--- a/Torpedo/Views/PlayerNameWindow.xaml
+++ b/Torpedo/Views/PlayerNameWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Torpedo.Views.Window1"
+﻿<Window x:Class="Torpedo.Views.PlayerNameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo.Views"
         mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800">
+        Title="PlayerNameWindow" Height="450" Width="800">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="4*"/>
@@ -26,6 +26,6 @@
 
 		<CheckBox Grid.Row="2" Grid.Column="0" Content="AI" HorizontalAlignment="Center" VerticalAlignment="Center" />
 		<Button Grid.Row="2" Grid.Column="1" Content="Start" FontSize="30"/>
-		
+
 	</Grid>
 </Window>
