--- a/Torpedo/MainWindow.xaml
+++ b/Torpedo/MainWindow.xaml
@@ -4,9 +4,23 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo"
+        xmlns:viewModel="clr-namespace:Torpedo.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <viewModel:MainViewModel />
+    </Window.DataContext>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
 
+        <TextBlock Text="Torpedo" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50"/>
+        <Button Grid.Row="1" Content="Play" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="30" Width="300" Command="{Binding Play}"></Button>
+        <Button Grid.Row="2" Content="Scoreboard" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" Command="{Binding ShowScoreboard}"></Button>
+        <Button Grid.Row="3" Content="Exit" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="30" Width="300" Command="{Binding Exit}"></Button>
     </Grid>
 </Window>
