--- a/Torpedo/Views/ScoreboardWindow.xaml
+++ b/Torpedo/Views/ScoreboardWindow.xaml
@@ -4,9 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo.Views"
+        xmlns:viewModel="clr-namespace:Torpedo.ViewModel"
         mc:Ignorable="d"
         Title="ScoreboardWindow" Height="450" Width="800">
-
+    <Window.DataContext>
+        <viewModel:ScoreboardViewModel />
+    </Window.DataContext>
     <Window.Resources>
         <Style x:Key="HeaderStyle" TargetType="DataGridColumnHeader">
             <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -31,7 +34,7 @@
             </DataGrid.Columns>
         </DataGrid>
         
-        <Button Grid.Row="2" Content="Back to main menu" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Width="200"/>
+        <Button Grid.Row="2" Content="Back to main menu" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Width="200" Command="{Binding Back}"/>
 
     </Grid>
 </Window>
