--- a/Torpedo/Views/GameWindow.xaml
+++ b/Torpedo/Views/GameWindow.xaml
@@ -4,10 +4,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo.Views"
+        xmlns:viewModel="clr-namespace:Torpedo.ViewModel"
         mc:Ignorable="d"
-        Title="GameWindow" Height="650" Width="1300">
-	<StackPanel Background="Black">
-		<Grid>
+        Title="GameWindow" Height="800" Width="1300">
+    <Window.DataContext>
+        <viewModel:GameViewModel />
+    </Window.DataContext>
+    <StackPanel Background="Black">
+        <Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="1*"/>
 				<RowDefinition Height="11*"/>
@@ -34,14 +38,72 @@
 				<Label Grid.Column="7" Content="0" Foreground="White" HorizontalAlignment="Left"/>
 			</Grid>
 			<Grid Grid.Row="1">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition/>
-					<ColumnDefinition/>
-				</Grid.ColumnDefinitions>
-				
-				<Canvas Grid.Column="0" Grid.Row="1" x:Name="canvas" Background="Lime" Height="555" Width="555" Margin="20" />
-				<Canvas Grid.Column="1" Grid.Row="1" x:Name="canvas2" Background="Lime" Height="555" Width="555" Margin="20" />
-			</Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+
+                <Label Foreground="White" Grid.Row="1" Grid.Column="1" Content="A    B    C    D   E    F    G    H    I     J"  FontSize="30px" Margin="85,0,0, 550"  />
+                <Label Foreground="White" Grid.Row="1" Grid.Column="0" Content="A    B    C    D   E    F    G    H    I     J"  FontSize="30px" Margin="85,0,0, 550"  />
+                <TextBlock Foreground="White" Grid.Row="1" Grid.Column="1" Width="50px" Text="1 2 3 4 5 6 7 8 9 10" FontFamily="SimHei" FontSize="42px" Margin="0,50,550,0" TextWrapping="Wrap" />
+                <TextBlock Foreground="White" Grid.Row="1" Grid.Column="0" Width="50px" Text="1 2 3 4 5 6 7 8 9 10" FontFamily="SimHei" FontSize="42px" Margin="0,50,550,0" TextWrapping="Wrap" />
+                <Grid Margin="20" Height="500" Width="500" Name="playerGrid" Grid.Row="1" Grid.Column="0" Background="Transparent" ShowGridLines="True" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                </Grid>
+
+                <Grid Margin="20" Height="500" Width="500" Name="enemyGrid" Grid.Row="1" Grid.Column="1" Background="Transparent" ShowGridLines="True" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                </Grid>
+            </Grid>
 		</Grid>
 	</StackPanel>
 </Window>
