--- a/Torpedo/Views/PlayerNameWindow.xaml
+++ b/Torpedo/Views/PlayerNameWindow.xaml
@@ -4,8 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo.Views"
+        xmlns:viewModel="clr-namespace:Torpedo.ViewModel"
         mc:Ignorable="d"
         Title="PlayerNameWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <viewModel:PlayerNameViewModel />
+    </Window.DataContext>
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="4*"/>
@@ -19,13 +23,13 @@
 		</Grid.ColumnDefinitions>
 
 		<Label Grid.Row="0" Grid.Column="0" Content="First Player:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
-		<Label Grid.Row="1" Grid.Column="0" Content="Second Player:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
+		<Label Grid.Row="1" Grid.Column="0" Content="Second Player:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" IsEnabled="{Binding TwoPlayerGame}"/>
 
 		<TextBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300"/>
-		<TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300"/>
+        <TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="{Binding TwoPlayerGame}"/>
 
-		<CheckBox Grid.Row="2" Grid.Column="0" Content="AI" HorizontalAlignment="Center" VerticalAlignment="Center" />
-		<Button Grid.Row="2" Grid.Column="1" Content="Start" FontSize="30"/>
+        <CheckBox Grid.Row="2" Grid.Column="0" Content="Two Player Game" HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding TwoPlayerGame}"/>
+		<Button Grid.Row="2" Grid.Column="1" Content="Start" FontSize="30" Command="{Binding Start}"/>
 
 	</Grid>
 </Window>
