--- a/Torpedo/Views/PlayerNameWindow.xaml
+++ b/Torpedo/Views/PlayerNameWindow.xaml
@@ -25,8 +25,8 @@
 		<Label Grid.Row="0" Grid.Column="0" Content="First Player:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
 		<Label Grid.Row="1" Grid.Column="0" Content="Second Player:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" IsEnabled="{Binding TwoPlayerGame}"/>
 
-		<TextBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300"/>
-        <TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="{Binding TwoPlayerGame}"/>
+        <TextBox Text="{Binding FirstPlayer, Mode=TwoWay}" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300"/>
+        <TextBox Text="{Binding SecondPlayer, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="{Binding TwoPlayerGame}"/>
 
         <CheckBox Grid.Row="2" Grid.Column="0" Content="Two Player Game" HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding TwoPlayerGame}"/>
 		<Button Grid.Row="2" Grid.Column="1" Content="Start" FontSize="30" Command="{Binding Start}"/>
