--- a/Torpedo/GameWindow.xaml
+++ b/Torpedo/GameWindow.xaml
@@ -1,43 +1,39 @@
-﻿<Window x:Class="Torpedo.Views.GameWindow"
+﻿<Window x:Class="Torpedo.GameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Torpedo.Views"
-        xmlns:viewModel="clr-namespace:Torpedo.ViewModel"
+        xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
         Title="GameWindow" Height="700" Width="1300">
-    <Window.DataContext>
-        <viewModel:GameViewModel />
-    </Window.DataContext>
     <StackPanel Background="Black">
         <Grid>
-			<Grid.RowDefinitions>
-				<RowDefinition Height="1*"/>
-				<RowDefinition Height="11*"/>
-			</Grid.RowDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="11*"/>
+            </Grid.RowDefinitions>
 
-			<Grid Grid.Row="0">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition/>
-					<ColumnDefinition/>
-					<ColumnDefinition/>
-					<ColumnDefinition/>
-					<ColumnDefinition/>
-					<ColumnDefinition/>
-					<ColumnDefinition/>
-					<ColumnDefinition/>
-				</Grid.ColumnDefinitions>
-				<Label Grid.Column="0" Content="Jelenlegi játékos: " Foreground="White" HorizontalAlignment="Right"/>
-				<Label Grid.Column="1" Content="Jatekos1" Foreground="White" HorizontalAlignment="Left"/>
-				<Label Grid.Column="2" Content="Saját találatok: " Foreground="White" HorizontalAlignment="Right"/>
-				<Label Grid.Column="3" Content="0" Foreground="White" HorizontalAlignment="Left"/>
-				<Label Grid.Column="4" Content="Ellenfél találatai: " Foreground="White" HorizontalAlignment="Right"/>
-				<Label Grid.Column="5" Content="0" Foreground="White" HorizontalAlignment="Left"/>
-				<Label Grid.Column="6" Content="Körök száma: " Foreground="White" HorizontalAlignment="Right"/>
-				<Label Grid.Column="7" Content="0" Foreground="White" HorizontalAlignment="Left"/>
-			</Grid>
-			<Grid Grid.Row="1">
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Content="Jelenlegi játékos: " Foreground="White" HorizontalAlignment="Right"/>
+                <Label Grid.Column="1" Content="Jatekos1" Foreground="White" HorizontalAlignment="Left"/>
+                <Label Grid.Column="2" Content="Saját találatok: " Foreground="White" HorizontalAlignment="Right"/>
+                <Label Grid.Column="3" Content="0" Foreground="White" HorizontalAlignment="Left"/>
+                <Label Grid.Column="4" Content="Ellenfél találatai: " Foreground="White" HorizontalAlignment="Right"/>
+                <Label Grid.Column="5" Content="0" Foreground="White" HorizontalAlignment="Left"/>
+                <Label Grid.Column="6" Content="Körök száma: " Foreground="White" HorizontalAlignment="Right"/>
+                <Label Grid.Column="7" Content="0" Foreground="White" HorizontalAlignment="Left"/>
+            </Grid>
+            <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
@@ -104,6 +100,6 @@
                     </Grid.RowDefinitions>
                 </Grid>
             </Grid>
-		</Grid>
-	</StackPanel>
+        </Grid>
+    </StackPanel>
 </Window>
