--- a/Torpedo/ScoreboardWindow.xaml
+++ b/Torpedo/ScoreboardWindow.xaml
@@ -1,15 +1,11 @@
-﻿<Window x:Class="Torpedo.Views.ScoreboardWindow"
+﻿<Window x:Class="Torpedo.ScoreboardWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Torpedo.Views"
-        xmlns:viewModel="clr-namespace:Torpedo.ViewModel"
+        xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
         Title="ScoreboardWindow" Height="450" Width="800">
-    <Window.DataContext>
-        <viewModel:ScoreboardViewModel />
-    </Window.DataContext>
     <Window.Resources>
         <Style x:Key="HeaderStyle" TargetType="DataGridColumnHeader">
             <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -33,7 +29,7 @@
                 <DataGridTextColumn Header="Winner" IsReadOnly="True" HeaderStyle="{StaticResource HeaderStyle}" Width="2*"/>
             </DataGrid.Columns>
         </DataGrid>
-        
+
         <Button Grid.Row="2" Content="Back to main menu" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Width="200" Command="{Binding Back}"/>
 
     </Grid>
