--- a/Torpedo/PlayerNameWindow.xaml
+++ b/Torpedo/PlayerNameWindow.xaml
@@ -19,12 +19,12 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Content="First Player:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
-        <Label Grid.Row="1" Grid.Column="0" Content="Second Player:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
+        <Label Name="player2Label" Grid.Row="1" Grid.Column="0" Content="Second Player:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" IsEnabled="False"/>
 
-        <TextBox Name="player1TextBox" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" TextChanged="player1TextBox_TextChanged"/>
-        <TextBox Name="player2TextBox"  Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300"/>
+        <TextBox Name="player1TextBox" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" />
+        <TextBox Name="player2TextBox"  Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="False" />
 
-        <CheckBox Name="TwoPlayerGame" Grid.Row="2" Grid.Column="0" Content="Two Player Game" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <CheckBox Name="TwoPlayerGame" Grid.Row="2" Grid.Column="0" Content="Two Player Game" HorizontalAlignment="Center" VerticalAlignment="Center" Click="EnableSeconPlayer"/>
         <Button Name="StartButton" Grid.Row="2" Grid.Column="1" Content="Start" FontSize="30" Click="StartButton_Click"/>
 
     </Grid>
