--- a/Torpedo/GameWindow.xaml
+++ b/Torpedo/GameWindow.xaml
@@ -25,13 +25,13 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0" Content="Jelenlegi játékos: " Foreground="White" HorizontalAlignment="Right"/>
-                <Label Grid.Column="1" Content="Jatekos1" Foreground="White" HorizontalAlignment="Left"/>
+                <Label Name="CurrentPlayer" Grid.Column="1" Foreground="White" HorizontalAlignment="Left"/>
                 <Label Grid.Column="2" Content="Saját találatok: " Foreground="White" HorizontalAlignment="Right"/>
-                <Label Grid.Column="3" Content="0" Foreground="White" HorizontalAlignment="Left"/>
+                <Label Name="NumberOfOwnHits" Grid.Column="3" Foreground="White" HorizontalAlignment="Left"/>
                 <Label Grid.Column="4" Content="Ellenfél találatai: " Foreground="White" HorizontalAlignment="Right"/>
-                <Label Grid.Column="5" Content="0" Foreground="White" HorizontalAlignment="Left"/>
+                <Label Name="NumberOfEnemyHits" Grid.Column="5" Foreground="White" HorizontalAlignment="Left"/>
                 <Label Grid.Column="6" Content="Körök száma: " Foreground="White" HorizontalAlignment="Right"/>
-                <Label Grid.Column="7" Content="0" Foreground="White" HorizontalAlignment="Left"/>
+                <Label Name="NumberOfTurns" Grid.Column="7" Foreground="White" HorizontalAlignment="Left"/>
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
