--- a/Torpedo/NextTurnWindow.xaml
+++ b/Torpedo/NextTurnWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
-        Title="NextTurnWindow" Height="450" Width="800">
+        Title="NextTurnWindow" Height="250" Width="400"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
