--- a/Torpedo/ScoreboardWindow.xaml
+++ b/Torpedo/ScoreboardWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
-        Title="ScoreboardWindow" Height="450" Width="800">
+        Title="ScoreboardWindow" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="HeaderStyle" TargetType="DataGridColumnHeader">
             <Setter Property="HorizontalAlignment" Value="Center"/>
