--- a/Torpedo/ShipPlacingWindow.xaml
+++ b/Torpedo/ShipPlacingWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
-        Title="ShipPlacingWindow" Height="450" Width="800">
+        Title="ShipPlacingWindow" Height="700" Width="800"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
