Setting windows to non-resizeable

--- a/Torpedo/GameOverWindow.xaml
+++ b/Torpedo/GameOverWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
         Title="GameOverWindow" Height="250" Width="400"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize">
     <Grid>
 
         <Grid.RowDefinitions>
