--- a/Torpedo/AIBattlefieldWindow.xaml
+++ b/Torpedo/AIBattlefieldWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
-        Title="AIBattlefield" Height="600" Width="550">
+        Title="AIBattlefield" Height="600" Width="550"
+        ResizeMode="NoResize">
     <Grid>
         <Grid Margin="20" Height="500" Width="500" Name="aiGrid" Grid.Row="1" Grid.Column="1" Background="Transparent" ShowGridLines="True" >
             <Grid.ColumnDefinitions>
