--- a/Torpedo/ScoreboardWindow.xaml
+++ b/Torpedo/ScoreboardWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
         Title="ScoreboardWindow" Height="450" Width="800"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize">
 
     <Grid>
         <Grid.RowDefinitions>
