--- a/Torpedo/ShipPlacingWindow.xaml
+++ b/Torpedo/ShipPlacingWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Torpedo"
         mc:Ignorable="d"
         Title="ShipPlacingWindow" Height="700" Width="800"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
