--- a/Torpedo/GameWindow.xaml
+++ b/Torpedo/GameWindow.xaml
@@ -12,6 +12,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
                 <RowDefinition Height="11*"/>
             </Grid.RowDefinitions>
 
@@ -26,16 +27,24 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Column="0" Content="Jelenlegi játékos: " Foreground="White" HorizontalAlignment="Right"/>
-                <Label Name="CurrentPlayer" Grid.Column="1" Foreground="White" HorizontalAlignment="Left"/>
-                <Label Grid.Column="2" Content="Saját találatok: " Foreground="White" HorizontalAlignment="Right"/>
-                <Label Name="NumberOfOwnHits" Grid.Column="3" Foreground="White" HorizontalAlignment="Left"/>
-                <Label Grid.Column="4" Content="Ellenfél találatai: " Foreground="White" HorizontalAlignment="Right"/>
-                <Label Name="NumberOfEnemyHits" Grid.Column="5" Foreground="White" HorizontalAlignment="Left"/>
-                <Label Grid.Column="6" Content="Körök száma: " Foreground="White" HorizontalAlignment="Right"/>
-                <Label Name="NumberOfTurns" Grid.Column="7" Foreground="White" HorizontalAlignment="Left"/>
+                <Label Grid.Column="0" Content="Jelenlegi játékos: " Foreground="White" HorizontalAlignment="Right" FontSize="20"/>
+                <Label Name="CurrentPlayer" Grid.Column="1" Foreground="White" HorizontalAlignment="Left" FontSize="20"/>
+                <Label Grid.Column="2" Content="Saját találatok: " Foreground="White" HorizontalAlignment="Right" FontSize="20"/>
+                <Label Name="NumberOfOwnHits" Grid.Column="3" Foreground="White" HorizontalAlignment="Left" FontSize="20"/>
+                <Label Grid.Column="4" Content="Ellenfél találatai: " Foreground="White" HorizontalAlignment="Right" FontSize="20"/>
+                <Label Name="NumberOfEnemyHits" Grid.Column="5" Foreground="White" HorizontalAlignment="Left" FontSize="20"/>
+                <Label Grid.Column="6" Content="Körök száma: " Foreground="White" HorizontalAlignment="Right" FontSize="20"/>
+                <Label Name="NumberOfTurns" Grid.Column="7" Foreground="White" HorizontalAlignment="Left" FontSize="20"/>
             </Grid>
             <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Content="Own Table" Foreground="White" HorizontalAlignment="Center" FontSize="30"/>
+                <Label Grid.Column="1" Content="Enemy Table" Foreground="White" HorizontalAlignment="Center" FontSize="30"/>
+            </Grid>
+            <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
